--- a/LinuxWindowsService.App/App.config
+++ b/LinuxWindowsService.App/App.config
@@ -1,6 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" 
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+        autoReload="true">
+
+    <targets async="true">
+      <target name="console" xsi:type="Console" />
+    </targets>
+
+    <rules>
+      <logger name="*" writeTo="console" />
+    </rules>
+    
+  </nlog>
+  
 </configuration>
