Simple queuing using client server sqlite working.

--- a/LinuxWindowsService.App/App.config
+++ b/LinuxWindowsService.App/App.config
@@ -2,15 +2,13 @@
 <configuration>
   
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
 
-  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" 
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-        autoReload="true">
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
 
     <targets async="true">
-      <target name="console" xsi:type="Console" />
+       <target name="console" xsi:type="Console" />
     </targets>
 
     <rules>
@@ -19,4 +17,27 @@
     
   </nlog>
   
+  <runtime>
+  
+       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0" />
+  
+            </dependentAssembly>
+  
+       </assemblyBinding>
+  
+  </runtime>
 </configuration>
