--- a/TestClientConsoleApp/TestClientConsoleApp.csproj
+++ b/TestClientConsoleApp/TestClientConsoleApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EAD8A35-69EE-4357-981A-7F5FAB2CB765}</ProjectGuid>
+    <ProjectGuid>{E711D82B-A263-43B6-AD5A-6E85FC9D6565}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LinuxWindowsService.App</RootNamespace>
-    <AssemblyName>LinuxWindowsService.App</AssemblyName>
+    <RootNamespace>TestClientConsoleApp</RootNamespace>
+    <AssemblyName>TestClientConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -89,16 +86,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HangfireServiceHost.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="HangfireServiceHost.Designer.cs">
-      <DependentUpon>HangfireServiceHost.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
