--- a/TestClientConsoleApp/TestClientConsoleApp.csproj
+++ b/TestClientConsoleApp/TestClientConsoleApp.csproj
@@ -96,6 +96,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LinuxWindowsService.SharedTypes\LinuxWindowsService.SharedTypes.csproj">
+      <Project>{9bf15679-2cf7-4ddb-bf28-1dff87c677f3}</Project>
+      <Name>LinuxWindowsService.SharedTypes</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
