--- a/TestClientConsoleApp/App.config
+++ b/TestClientConsoleApp/App.config
@@ -1,18 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+  <connectionStrings>
+    <add name="HangfireServerDb" 
+         connectionString="Data Source=C:\Code\Learning\LinuxWindowsService\LinuxWindowsService.App\bin\Debug\HangfireQueueDb.sqlite;Version=3;"/>
+  </connectionStrings>
 </configuration>
