--- a/TestClientConsoleApp/App.config
+++ b/TestClientConsoleApp/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
   <connectionStrings>
-    <add name="HangfireServerDb" 
-         connectionString="Data Source=C:\Code\Learning\LinuxWindowsService\LinuxWindowsService.App\bin\Debug\HangfireQueueDb.sqlite;Version=3;"/>
+    <add name="azureredis" connectionString=""/>
   </connectionStrings>
+  
 </configuration>
