--- a/LinuxWindowsService.App/App.config
+++ b/LinuxWindowsService.App/App.config
@@ -5,6 +5,10 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
 
+  <connectionStrings>
+    <add name="azureredis" connectionString=""/>
+  </connectionStrings>
+
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
     <targets async="true">
        <target name="console" xsi:type="Console" />
@@ -14,27 +18,4 @@
     </rules>
   </nlog>
   
-  <runtime>
-  
-       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-  
-            <dependentAssembly>
-  
-                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-  
-                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-  
-            </dependentAssembly>
-  
-            <dependentAssembly>
-  
-                 <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-  
-                 <bindingRedirect oldVersion="0.0.0.0-1.0.99.0" newVersion="1.0.99.0" />
-  
-            </dependentAssembly>
-  
-       </assemblyBinding>
-  
-  </runtime>
 </configuration>
