--- a/TestClientConsoleApp/packages.config
+++ b/TestClientConsoleApp/packages.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.42" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.5.3" targetFramework="net452" />
-  <package id="Hangfire.SQLite" version="1.1.0.0" targetFramework="net452" />
+  <package id="HangFire.Redis.StackExchange" version="1.4.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="NLog" version="4.2.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
+  <package id="StackExchange.Redis" version="1.0.414" targetFramework="net452" />
 </packages>
